# algo-trading-broker

./: .editorconfig  .env.example  .gitignore  .prettierrc  0003_create_accounts_and_broker_settings.py  AUDIT.md  Dockerfile  Dockerfile.broker  FUNDING.yml  LICENSE  Makefile  README.md  alembic.ini  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
alembic/: env.py
alembic/versions/: 0001_create_signals_and_trades.py  54892682ef32_add_account_table_and_setting_table.py  922c6a79dffc_float_to_numeric_for_financial_columns.py  a1b2c3d4e5f6_add_trade_broadcast_subscriptions.py  a4d6e1b9c5f7_add_silent_signal_setting.py  a5e6f7b8c9d0_add_signal_status_and_max_retry_timeout.py  b3f2a1d0e5c6_add_scale_fields_to_signals.py  b6f7a8c9d0e1_add_signal_attempts_and_failed_status.py  c1a2b3d4e5f6_add_crypto_allowed_symbol_setting.py  c9d8e7f6a5b4_composite_account_key_and_trade_gateway.py  d2b3c4e5f6a7_add_crypto_max_leverage_setting.py  d4f1a2c3b5e6_add_telegram_fields_to_accounts.py  e1f2a3b4c5d6_multi_account_telegram_sessions.py  e3c4d5f6a7b8_add_notification_timezone_setting.py  f4d5e6a7b8c9_add_gateway_to_accounts.py  f7a8b9c0d1e2_bot_platform_links.py
bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
bot/app/: __init__.py  __main__.py  commands.py  config.py  constants.py  emojis.py  helpers.py  logger.py  states.py
bot/app/filters/: admin.py  is_admin.py
bot/app/formatters/: messages.py
bot/app/handlers/: __init__.py  account.py  admin.py  commands.py  link.py  start.py  trades.py
bot/app/keyboards/: inline.py
bot/app/middlewares/: auth.py  deps.py
bot/app/presenters/: messages.py
bot/app/services/: broker_client.py
bot/app/utils/: invite.py  pagination.py  table.py  telegram.py  timezone.py
bot/tests/: conftest.py  test_admin_filter.py  test_admin_invite.py  test_broker_client.py  test_commands.py  test_formatters.py  test_invite.py  test_pagination.py  test_presenters.py  test_start_deeplink.py  test_table.py  test_timezone.py
broker/: api.py  app.py  constants.py  dependencies.py  interfaces.py  logger.py  main.py  models.py  nats.py  notification.py  openapi.py  providers.py  publisher.py  router.py  settings.py  signal_parser.py  trade_listener.py  webhook.py
broker/api/: admin.py  api.py  telegram.py  webhook.py
broker/apis/: api.py  trade.py  webhook.py
broker/db/: __init__.py  engine.py  models.py  repository.py
broker/domain/: trade_status.py
broker/helpers/: emoji_constants.py  message_formatter.py  signal_helper.py  timeframe_helper.py  timezone_helper.py
broker/interfaces/: __init__.py  db_protocol.py  notifier_protocol.py  publisher_protocol.py
broker/schemas/: account_schema.py  admin_schema.py  core.py  publisher_schema.py  subscriber_schema.py  telegram_schema.py  trade_event_schema.py  trade_schema.py  webhook.py  webhook_schema.py
broker/security/: ensure_api_key.py
broker/services/: nats_consumer.py  nats_publisher.py  nats_service.py  nats_system_consumer.py  notification_service.py  publisher_service.py  signal_processing_service.py  signal_retry_job.py  signal_worker.py  telegram_log_handler.py  trade_broadcast_service.py  trade_listener.py
bruno/: Create Trade.yml  Health Check.yml  Toggle BlockSignal.yml  Toggle Prevent Signal.yml  Update Trade.yml  Webhook.yml  accounts.yml  opencollection.yml
bruno/ADMIN/: FLAT.yml  folder.yml
bruno/API/: Health Check.yml  accounts.yml  folder.yml  trades.yml
bruno/environments/: Algo Trading Broker - LOCAL.yml  Algo Trading Broker - live.yml  Algo Trading Broker.yml  Algo Traing Broker - Tuneling test.yml  Algo Traing Broker - testing.yml
bruno/webhook/: Webhook - FLAT.yml  (+7 more)
bruno/webhook - BTC/: Webhook - FLAT.yml  Webhook - LONG.yml  Webhook - R_SL.yml  Webhook - SHORT.yml  Webhook - SL.yml  Webhook - TP1.yml  Webhook - TP2.yml  folder.yml
e2e/: simulate_signals.py  subscriber_curve.py
examples/: close.sl.json  close.tp2.json  entry.short.json
scripts/: docker-entrypoint.sh  ensure_keys.py  generate_curve_keypair.py
shared/: config.py  logger.py
tests/: conftest.py  test_api_endpoints.py  test_ensure_api_key.py  test_message_formatter.py  test_nats_consumer.py  test_nats_publisher.py  test_nats_system_consumer.py  test_notification_service.py  test_repository.py  test_schemas.py  test_signal_helper.py  test_signal_processing_service.py  test_signal_retry_job.py  test_signal_worker.py  test_telegram_endpoints.py  test_telegram_log_handler.py  test_timeframe_helper.py  test_timezone_helper.py  test_trade_broadcast.py  test_trade_status_policy.py
(+69 files in other folders)
