[tool.poetry]
name = "algo-trading-broker"
version = "0.1.0"
description = "Decentralized trading signal broker using FastAPI and ZeroMQ"
authors = []
readme = "README.md"
packages = [{ include = "broker" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
pyzmq = ">=25.1.2"
pydantic = ">=2.7.1"
pydantic-settings = ">=2.2.1"
python-dotenv = ">=1.0.1"
httpx = ">=0.27.0"

# PostgreSQL async driver
asyncpg = ">=0.29.0"
sqlalchemy = { version = ">=2.0.30", extras = ["asyncio"] }
alembic = ">=1.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool configurations (unchanged)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
