[project]
name = "algo-trading-bot"
version = "1.0.0"
description = "Telegram bot for algo-trading-broker — self-service trades & control for end users"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# This is an application, not a distributable package — uv installs only the
# dependencies and runs the code in-place via `python -m app`.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
